--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -2,11 +2,27 @@
 $color-white: #fff;
 $color-black: #000;
 
+$color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
+
+$color-grey-dark-1: #999;
+$color-grey-dark-2: #777;
+
+$color-pink-bilibili-light: #F15F79;
+$color-pink-bilibili: #fb7299;
+$color-pink-bilibili-dark: #B24592;
+
+$color-green-nvidia-light: #DCE35B;
+$color-green-nvidia: #72b300;
+$color-green-nvidia-dark: #45B649;
+
 $color-primary-light: #74b6fd;
 $color-primary: #2487fc;
 $color-primary-dark: #1875ec;
 
-$color-secondary: #9b242d ;
+$color-secondary-light: #ED213A;
+$color-secondary: #c1252c;
+$color-secondary-dark: #93291E;
 
 $color-grey-dark: #777;
 
