--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,29 @@ body {
     font-size: 2rem;
     font-weight: 400; }
 
-.u-maargin-bottom-small {
+.heading-secondary {
+  font-size: 3.5rem;
+  font-weight: 700;
+  background-image: linear-gradient(to right, #74b6fd, #1875ec);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  transition: all 0.2s;
+  display: inline-block; }
+  .heading-secondary:hover {
+    text-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15); }
+
+.u-margin-bottom-small {
   margin-bottom: 2rem; }
 
-.u-maargin-bottom-medium {
+.u-margin-bottom-medium {
   margin-bottom: 4rem; }
 
-.u-maargin-bottom-big {
+.u-margin-bottom-big {
   margin-bottom: 8rem; }
+
+.u-center-text {
+  text-align: center; }
 
 *,
 *::after,
@@ -48,7 +63,8 @@ html, body {
   border-radius: 20rem;
   font-weight: 400;
   transition: all 0.2s;
-  position: relative; }
+  position: relative;
+  backface-visibility: hidden; }
 
 .btn:hover {
   transform: translateY(-0.3rem);
@@ -62,7 +78,7 @@ html, body {
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2); }
 
 .btn--to-red:hover, .btn--to-red:active {
-  background-color: #9b242d;
+  background-color: #c1252c;
   color: #fff; }
 
 .btn::after {
@@ -80,9 +96,90 @@ html, body {
 
 .btn--white {
   background-color: #fff;
-  color: #777; }
+  color: #777;
+  z-index: 1; }
   .btn--white::after {
     background-color: #fff; }
+
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative; }
+  .card--medium {
+    width: 100%;
+    padding-top: 100%; }
+  .card--wide {
+    width: 100%;
+    padding-top: 50%; }
+  .card__side {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 1rem;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.15);
+    overflow: hidden;
+    transition: all 0.8s; }
+    .card__side--back-1 {
+      background-image: linear-gradient(to right bottom, rgba(237, 33, 58, 0.85), rgba(147, 41, 30, 0.85)); }
+    .card__side--back-2 {
+      background-image: linear-gradient(to right bottom, rgba(241, 95, 121, 0.85), rgba(178, 69, 146, 0.85)); }
+    .card__side--back-3 {
+      background-image: linear-gradient(to right bottom, rgba(220, 227, 91, 0.85), rgba(69, 182, 73, 0.85)); }
+  .card--medium:hover .card__side--front {
+    transform: translate(-50%, -50%) rotateY(-180deg); }
+  .card--medium .card__side--back {
+    transform: translate(-50%, -50%) rotateY(180deg); }
+  .card--medium:hover .card__side--back {
+    transform: translate(-50%, -50%) rotateY(0deg); }
+  .card--wide:hover .card__side--front {
+    transform: translate(-50%, -50%) rotateX(-180deg); }
+  .card--wide .card__side--back {
+    transform: translate(-50%, -50%) rotateX(180deg); }
+  .card--wide:hover .card__side--back {
+    transform: translate(-50%, -50%) rotateX(0deg); }
+  .card__picture {
+    background-size: cover;
+    height: 70%; }
+    .card__picture--1 {
+      background-image: url(../../img/grace.jpg); }
+    .card__picture--2 {
+      background-image: url(../../img/bilibili-coin.png); }
+    .card__picture--3 {
+      background-image: url(../../img/QM6000.jpg); }
+  .card__detail {
+    padding: 3rem; }
+  .card__heading {
+    font-size: 2.5rem;
+    font-weight: 400;
+    color: #777;
+    margin-bottom: 2rem; }
+    .card__heading--1 {
+      color: #c1252c; }
+    .card__heading--2 {
+      color: #fb7299; }
+    .card__heading--3 {
+      color: #72b300; }
+  .card__text {
+    font-size: 1.6rem;
+    color: #777; }
+  .card__more-info {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    text-align: center;
+    width: 80%; }
+    .card__more-info--sub {
+      font-size: 1.6rem; }
+    .card__more-info--main {
+      font-size: 4rem;
+      margin-bottom: 10rem;
+      text-transform: uppercase; }
 
 .navigation {
   background-color: #fff;
@@ -116,7 +213,7 @@ html, body {
     font-size: 1.8rem;
     font-weight: 300;
     padding: 1rem 2rem;
-    background-image: linear-gradient(120deg, #fff 0%, #fff 50%, #9b242d 50%);
+    background-image: linear-gradient(120deg, #fff 0%, #fff 50%, #c1252c 50%);
     background-size: 300%;
     background-position: 0%;
     transition: all 0.5s;
@@ -173,3 +270,7 @@ html, body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
+
+.section-stories {
+  background-color: #f7f7f7;
+  padding: 15rem 0; }
