--- a/sass/abstracts/_typography.scss
+++ b/sass/abstracts/_typography.scss
@@ -1,4 +1,5 @@
 body {
+    // font-family: "Lato", sans-serif;
     font-weight: 400;
     line-height: 1.7;
 }
@@ -21,4 +22,19 @@ body {
         // margin-bottom: 2rem;
     }
 
+}
+
+.heading-secondary {
+    font-size: 3.5rem;
+    font-weight: 700;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    transition: all 0.2s;
+    display: inline-block;
+
+    &:hover {
+        text-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+    }
 }
