--- a/sass/abstracts/_utilities.scss
+++ b/sass/abstracts/_utilities.scss
@@ -1,3 +1,5 @@
-.u-maargin-bottom-small { margin-bottom: 2rem; }
-.u-maargin-bottom-medium { margin-bottom: 4rem; }
-.u-maargin-bottom-big { margin-bottom: 8rem; }
+.u-margin-bottom-small { margin-bottom: 2rem; }
+.u-margin-bottom-medium { margin-bottom: 4rem; }
+.u-margin-bottom-big { margin-bottom: 8rem; }
+
+.u-center-text { text-align: center; }
