home page completed

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,15 @@ body {
   .heading-secondary:hover {
     text-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15); }
 
+.heading-tertiary {
+  text-align: center;
+  margin-bottom: 2rem; }
+  .heading-tertiary__main {
+    font-size: 3rem;
+    font-weight: 400; }
+  .heading-tertiary__sub {
+    font-size: 1.6rem; }
+
 .u-margin-bottom-small {
   margin-bottom: 2rem; }
 
@@ -181,6 +190,23 @@ html, body {
       margin-bottom: 10rem;
       text-transform: uppercase; }
 
+.event-box {
+  font-size: 1.6rem;
+  padding: 2.5rem;
+  background-color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+  border-radius: 0.3rem;
+  transition: all 0.5s;
+  height: 30rem; }
+  .event-box .heading-tertiary__main {
+    transition: all 0.5s; }
+  .event-box:hover {
+    transform: translateY(-2rem); }
+    .event-box:hover .heading-tertiary__main {
+      color: #c1252c; }
+  .event-box__text {
+    font-size: 1.6rem; }
+
 .navigation {
   background-color: #fff;
   width: 100%;
@@ -259,11 +285,12 @@ html, body {
 
 .header {
   position: relative;
-  width: 100vw;
+  width: 100%;
+  overflow: hidden;
   height: 80vh;
   background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../../img/banner.jpg);
   background-size: cover;
-  background-position: center; }
+  background-position: center center; }
   .header__text-box {
     position: absolute;
     top: 60%;
@@ -271,6 +298,63 @@ html, body {
     transform: translate(-50%, -50%);
     text-align: center; }
 
+.footer {
+  padding: 4rem 0;
+  padding-bottom: 0;
+  background-color: #333; }
+  .footer__logo-box {
+    padding-top: 3rem; }
+  .footer__logo {
+    width: 10rem;
+    height: auto; }
+  .footer__navigation {
+    position: relative;
+    height: 4rem;
+    margin-bottom: 4rem; }
+    .footer__navigation + .row {
+      border-top: 0.1rem solid #f7f7f7;
+      margin-bottom: 2rem; }
+  .footer__list {
+    list-style: none;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+  .footer__item {
+    display: inline-block; }
+    .footer__item:not(:last-child) {
+      margin-right: 2rem; }
+  .footer__link, .footer__link:link, .footer__link:visited {
+    text-decoration: none;
+    font-size: 2rem;
+    color: #999;
+    transition: all 0.2s; }
+  .footer__link:hover, .footer__link:active {
+    color: #fff; }
+  .footer__link--active {
+    color: #fff !important; }
+  .footer__contact {
+    padding-top: 4rem;
+    text-align: right; }
+    .footer__contact--heading {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+      color: #f7f7f7; }
+    .footer__contact--text {
+      font-size: 1.6rem;
+      color: #999; }
+  .footer__copyright {
+    text-align: center;
+    padding: 1rem 0;
+    border-top: 0.1rem solid #f7f7f7;
+    font-size: 1.6rem;
+    color: #999; }
+
 .section-stories {
-  background-color: #f7f7f7;
-  padding: 15rem 0; }
+  background-color: #f5f5f5;
+  padding: 10rem 0; }
+
+.section-events {
+  background-color: #eee;
+  padding: 10rem 0; }
