--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,4 +1,9 @@
 .section-stories {
-    background-color: $color-grey-light-1;
-    padding: 15rem 0;
+    background-color: $color-grey-light-3;
+    padding: 10rem 0;
+}
+
+.section-events {
+    background-color: $color-grey-light-2;
+    padding: 10rem 0;
 }
