--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,9 +4,11 @@ $color-black: #000;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
+$color-grey-light-3: #f5f5f5;
 
 $color-grey-dark-1: #999;
 $color-grey-dark-2: #777;
+$color-grey-dark-3: #333;
 
 $color-pink-bilibili-light: #F15F79;
 $color-pink-bilibili: #fb7299;
