--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,11 +1,12 @@
 .header {
     position: relative;
-    width: 100vw;
+    width: 100%;
+    overflow: hidden;
     height: 80vh;
     background-image: linear-gradient(to right bottom, rgba($color-black, 0.2), 
                       rgba($color-black, 0.2)), url(../../img/banner.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: center center;
 
     &__text-box {
         position: absolute;
