--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,9 +7,11 @@
 
 @import "components/button";
 @import "components/card";
+@import "components/event-box";
 
 @import "layout/navigation";
 @import "layout/grid";
 @import "layout/header";
+@import "layout/footer";
 
 @import "pages/home";
