--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -88,15 +88,15 @@
         height: 70%;
 
         &--1 {
-            background-image: url(../../img/grace.jpg);
+            background-image: url(../img/grace.jpg);
         }
 
         &--2 {
-            background-image: url(../../img/bilibili-coin.png);
+            background-image: url(../img/bilibili-coin.png);
         }
 
         &--3 {
-            background-image: url(../../img/QM6000.jpg);
+            background-image: url(../img/QM6000.jpg);
         }
     }
 
