--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
     overflow: hidden;
     height: 80vh;
     background-image: linear-gradient(to right bottom, rgba($color-black, 0.2), 
-                      rgba($color-black, 0.2)), url(../../img/banner.jpg);
+                      rgba($color-black, 0.2)), url(../img/banner.jpg);
     background-size: cover;
     background-position: center center;
 
